tests/negative/parser/fmt/unexpected_end.orng
// unexpected_end.orng:6:25: error: unexpected end of format string
//     try @print("Hello, }")
//                        ^
// 
fn main() -> ()!() with core::IO {
    try @print("Hello, }")
    .ok
}